--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
   intl: ^0.20.2
+  flutter_markdown: ^0.7.6+2
 
 dev_dependencies:
   flutter_test:
